--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,49 +1,100 @@
-			{% block stylesheets %}{% endblock %}
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-	</head>
-	<body>
-		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg bg-light bg-gradient fixed-top">
-			<div class="container">
-				<a class="navbar-brand fs-3" href="#">🏴‍☠️-Mon Blog-🏴‍☠️</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_main')}}">Accueil</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('post_list')}}">Articles</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_category')}}">Catégories</a>
-						</li>
-						{% if app.user %}
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_profile')}}">Profil</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_logout')}}">Déconnexion</a>
-						</li>
-						{% else %}
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_register')}}">Inscription</a>
-						</li>
-						{% endif %}
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</body>
-</html>
-
-
-<div class="container mt-5 pt-5"> {% block body %}{% endblock %}
+{% block stylesheets %}{% endblock %}
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head><body>
+<link
+rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-light bg-gradient fixed-top">
+	<div class="container">
+		<a class="navbar-brand fs-3" href="{{ path('app_main')}}">🏴‍☠️-Mon Blog-🏴‍☠️</a>
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ms-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('app_main')}}">Accueil</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('post_list')}}">Articles</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{{ path('categories')}}">Catégories</a>
+				</li>
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_profile')}}">Profil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_logout')}}">Déconnexion</a>
+					</li>
+				{% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_login')}}">Connexion</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('app_register')}}">Inscription</a>
+					</li>
+				{% endif %}
+				{% if is_granted('ROLE_ADMIN') %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('user_list') }}">Utilisateurs</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
 	</div>
-</body></html>
+</nav></body></html><div class="container mt-5 pt-5"> {% block body %}{% endblock %}</div></body><footer class="footer bg-dark bg-gradient text-light py-4 mt-5"><div class="container">
+<div
+	class="row">
+	{# Company Info Column #}
+	<div class="col-md-4 mb-3">
+		<h5>À propos</h5>
+		<p class="small">J'aime beaucoup manger des croquettes pour chien. Ça croque sous la dent, ça a bon goût, j'aime bien finalement...</p>
+	</div>
+
+	{# Quick Links Column #}
+	<div class="col-md-4 mb-3">
+		<h5>Liens rapides</h5>
+		<ul class="list-unstyled">
+			<li>
+				<a href="{{ path('app_main') }}" class="text-light">Accueil</a>
+			</li>
+			<li>
+				<a href="{{ path('categories') }}" class="text-light">Catégories</a>
+			</li>
+			<li>
+				<a href="{{ path('post_list')}}" class="text-light">Articles</a>
+			</li>
+		</ul>
+	</div>
+
+	{# Social Media Column #}
+	<div class="col-md-4 mb-3">
+		<h5>Suivez-moi</h5>
+		<div class="d-flex gap-3">
+			<a href="https://www.facebook.com/profile.php?id=61555786511364" class="text-light">
+				<i class="fab fa-facebook-f"></i>
+			</a>
+			<a href="https://x.com/GroseilleJlouis" class="text-light">
+				<i class="fab fa-twitter"></i>
+			</a>
+			<a href="https://www.instagram.com/the_prout_school/?hl=fr" class="text-light">
+				<i class="fab fa-instagram"></i>
+			</a>
+			<a href="https://www.linkedin.com/in/nicolas-malbec-b00aa972/?locale=fr_FR" class="text-light">
+				<i class="fab fa-linkedin-in"></i>
+			</a>
+		</div>
+	</div>
+</div>
+
+{# Copyright Bar #}
+<div class="row mt-3">
+	<div class="col-12">
+		<hr class="bg-secondary">
+		<p class="text-center mb-0">&copy;
+			{{ "now"|date("Y") }}
+			Mon Site à moi. Tous droits réservés.</p>
+	</div>
+</div></div></footer></html>
