--- a/templates/edit_profile/index.html.twig
+++ b/templates/edit_profile/index.html.twig
@@ -20,7 +20,7 @@
                 <div class="mb-3">
                     {{ form_row(editProfileForm.profilePicture, {'attr': {'class': 'form-control'}}) }}
                 </div>
-                <button type="submit" class="btn btn-dark">Enregistrer les modifications</button>
+                <button type="submit" class="btn btn-dark rounded-pill shadow-lg">Enregistrer les modifications</button>
             {{ form_end(editProfileForm) }}
         </div>
     </div>
