--- a/templates/profile/index.html.twig
+++ b/templates/profile/index.html.twig
@@ -9,7 +9,7 @@
 	</head>
 	<body class="bg-dark bg-gradiant">
 		<div class="bg-light pb-4 mb-5 rounded">
-			<h1 class="text-center">💩 - Mon Profil - 💩</h1>
+			<h1 class="text-center">🥷 - Mon Profil - 🥷</h1>
 			<div class="container mt-2 pt-2">
 				<div class="card mb-3">
 					<div class="row g-0">
@@ -27,7 +27,7 @@
 									<strong>Date de création:</strong>
 									{{ app.user.createdAt|date('d/m/Y') }}</p>
 								<div class="mt-3">
-									<a href="{{ path('app_edit_profile') }}" class="btn btn-dark">
+									<a href="{{ path('app_edit_profile') }}" class="btn btn-dark rounded-pill shadow-lg">
 										<i class="fas fa-edit"></i>
 										Modifier le profil
 									</a>
