--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -8,10 +8,37 @@
 		<div class="container pb-5">
 			<div class="example-wrapper text-center bg-light bg-gradient p-4 rounded shadow">
 				<h1 class="mb-4">🎥 - Liste des Catégories - 🎥</h1>
+
+				{% if is_granted('ROLE_ADMIN') %}
+					<div class="admin-controls mb-4">
+						<a href="{{ path('category_new') }}" class="btn btn-success mb-3">
+							<i class="fas fa-plus"></i>
+							Ajouter une catégorie
+						</a>
+					</div>
+				{% endif %}
+
 				<ul class="list-group">
 					{% for category in categories %}
 						<li class="list-group-item rounded">
-							<h3>{{ category.name }}</h3>
+							<div class="d-flex justify-content-between align-items-center">
+								<h3>{{ category.name }}</h3>
+								{% if is_granted('ROLE_ADMIN') %}
+									<div class="btn-group">
+										<a href="{{ path('category_edit', {'id': category.id}) }}" class="btn btn-warning mx-1">
+											<i class="fas fa-edit"></i>
+											Modifier
+										</a>
+										<form method="POST" action="{{ path('category_delete', {'id': category.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette catégorie ?');" style="display: inline;">
+											<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
+											<button type="submit" class="btn btn-danger">
+												<i class="fas fa-trash"></i>
+												Supprimer
+											</button>
+										</form>
+									</div>
+								{% endif %}
+							</div>
 							<hr>
 							{{ category.description }}
 							<br>
@@ -25,14 +52,9 @@
 											<h6 class="card-title">{{ post.title }}</h6>
 										</div>
 									</div>
-								{% else %}
-									<p>Aucun post trouvé.</p>
 								{% endfor %}
 							</div>
 						</li>
-						<br>
-					{% else %}
-						<li class="list-group-item">Aucune catégorie trouvée.</li>
 					{% endfor %}
 				</ul>
 			</div>
